--- a/.env
+++ b/.env
@@ -67,3 +67,10 @@
 #--------------------------------------------------------------------
 
 # logger.threshold = 4
+
+#--------------------------------------------------------------------
+# CLAVES API
+#--------------------------------------------------------------------
+
+marvel.public_key = "7ded81baab0bdbb1182d6eeeb467c8c32"
+marvel.private_key = "654e99e48e099a909b118eeb9d88e841b98c4cba"
