--- a/.env.example
+++ b/.env.example
@@ -14,13 +14,13 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
-# CI_ENVIRONMENT = production
+CI_ENVIRONMENT = development
 
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
 
-# app.baseURL = ''
+app.baseURL = 'http://localhost/Take-API-Marvel/public/'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
@@ -72,5 +72,6 @@
 # CLAVES API
 #--------------------------------------------------------------------
 
-marvel.public_key = "7ded81baab0bdbb1182d6eeeb467c8c32"
-marvel.private_key = "654e99e48e099a909b118eeb9d88e841b98c4cba"
+marvelapi.publicKey=7ded81baab0bdb1182d6eeeb467c8c32
+marvelapi.privateKey=654e99e48e099a909b118eeb9d88e841b98c4cba
+
